--- a/web/src/css/App.css
+++ b/web/src/css/App.css
@@ -31,4 +31,5 @@ input[type=number]::-webkit-outer-spin-button {
 .App {
   width: 100%;
   height: 100%;
+  background-color: rgba(10, 10, 10, 0.8);
 }
