--- a/web/src/css/App.scss
+++ b/web/src/css/App.scss
@@ -37,5 +37,6 @@ input[type=number]::-webkit-outer-spin-button {
 .App {
     width: 100%;
     height: 100%;
+    background-color: rgba(10, 10, 10, $alpha: 0.8);
 
 }
