--- a/web/src/css/App.scss
+++ b/web/src/css/App.scss
@@ -1,11 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 * {
-    --white: #ececec;
+    --white: #cccccc;
     --gray: rgb(136, 136, 136);
     --dark1: rgb(40, 40, 40);
     --dark2: rgb(55, 55, 55);
     --dark3: rgb(65, 65, 65);
+
+    --blue1: rgb(37, 91, 172);
+    --blue2: rgb(22, 54, 102);
+    --blue3: rgb(20, 44, 82);
+    --blueOutline: rgb(41, 84, 148);
 
     --red: rgb(150, 0, 0);
     --green: rgb(5, 94, 5);
@@ -20,7 +25,11 @@
 }
 
 ::-webkit-scrollbar {
-    display: none;
+    width: 0.7vh;
+}
+
+::-webkit-scrollbar-thumb {
+    background: var(--white);
 }
 
 input[type=number]::-webkit-inner-spin-button, 
@@ -37,6 +46,6 @@ input[type=number]::-webkit-outer-spin-button {
 .App {
     width: 100%;
     height: 100%;
-    background-color: rgba(10, 10, 10, $alpha: 0.8);
+    background-color: rgba(10, 10, 10, $alpha: 0.95);
 
 }
