--- a/web/src/css/App.css
+++ b/web/src/css/App.css
@@ -9,6 +9,10 @@
   --blue2: rgb(22, 54, 102);
   --blue3: rgb(20, 44, 82);
   --blueOutline: rgb(41, 84, 148);
+  --inventory-slot-item-amount-size: 1.45vh;
+  --inventory-slot-item-img-size: 8.2vh;
+  --inventory-slot-item-quality-size: 0.4vh;
+  --inventory-slot-item-quality-color: rgb(37, 91, 172);
   --inventory-slot-color: radial-gradient(circle, var(--dark1) 10%, #000000 200%);
   --inventory-slot-hover: radial-gradient(circle, var(--blue2) 10%, var(--blue3) 80%);
   --inventory-slot-context-info: radial-gradient(ellipse, rgba(80, 80, 80, 0.85) 30%, rgba(41, 41, 41, 0.85) 100%);
