--- a/web/src/css/Context.css
+++ b/web/src/css/Context.css
@@ -1,6 +1,6 @@
 .context-tooltip {
   position: absolute;
-  width: 280px;
+  width: 28vh;
   height: 80px;
   z-index: 1000 !important;
 }
@@ -30,8 +30,8 @@
 
 .context-actions {
   position: absolute;
-  width: 280px;
-  height: 80px;
+  width: 30vh;
+  height: 8vh;
   z-index: 1000 !important;
 }
 .context-actions .actions {
@@ -42,29 +42,29 @@
 }
 .context-actions .actions .slot-action {
   position: relative;
-  margin-bottom: 5px;
-  border-radius: 5px;
-  height: 50px;
+  margin-bottom: 0.6vh;
+  border-radius: 0.6vh;
+  height: 5.5vh;
   width: 100%;
   background: var(--inventory-slot-context-action);
 }
 .context-actions .actions .slot-action .icon {
   position: absolute;
   top: 50%;
-  left: 10.5px;
+  left: 1.3vh;
   transform: translateY(-50%);
-  font-size: 30px;
+  font-size: 3.2vh;
   color: var(--blue1);
 }
 .context-actions .actions .slot-action .label {
   position: absolute;
-  top: -0.7px;
-  left: 40px;
-  font-size: 10.6px;
+  top: -0.55vh;
+  left: 4.2vh;
+  font-size: 1.5vh;
   color: var(--white);
 }
 .context-actions .actions .slot-action:hover {
   background: var(--inventory-slot-context-action-hover);
-  outline: 2px solid var(--blueOutline);
+  outline: 0.25vh solid var(--blueOutline);
   cursor: pointer;
 }
