--- a/web/src/css/Inventory.css
+++ b/web/src/css/Inventory.css
@@ -1,35 +1,45 @@
 .inventory-wrapper {
   position: absolute;
-  width: 1200px;
-  height: 700px;
+  width: 125vh;
+  height: 73vh;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+.inventory-wrapper .right-inventories {
+  position: absolute;
+  width: 53.9vh;
+  height: 69vh;
+  right: 0vh;
+  overflow: auto;
 }
 .inventory-wrapper .inventory-grid-wrapper {
   position: absolute;
 }
 .inventory-wrapper .inventory-grid-wrapper.character-inventory {
-  width: 100px;
-  height: 660px;
-  left: 0px;
+  width: 10.5vh;
+  height: 68.9vh;
+  left: 0vh;
 }
 .inventory-wrapper .inventory-grid-wrapper.player-inventory {
-  width: 508px;
-  height: 660px;
-  right: 550.2px;
+  width: 53.1vh;
+  height: 68.9vh;
+  right: 57.4vh;
 }
 .inventory-wrapper .inventory-grid-wrapper.right-inventory {
-  width: 509px;
-  right: 0px;
+  position: relative;
+  width: 52.9vh;
+  right: 0vh;
+  margin-bottom: 4.1vh;
 }
-.inventory-wrapper .inventory-grid-wrapper.right-inventory.top {
-  top: 0px;
-  height: 360px;
+.inventory-wrapper .inventory-grid-wrapper.right-inventory.last {
+  margin-bottom: 0vh;
 }
-.inventory-wrapper .inventory-grid-wrapper.right-inventory.bottom {
-  bottom: 40px;
-  height: 260px;
+.inventory-wrapper .inventory-grid-wrapper.right-inventory.medium {
+  height: 37.6vh;
+}
+.inventory-wrapper .inventory-grid-wrapper.right-inventory.small {
+  height: 27.2vh;
 }
 .inventory-wrapper .inventory-grid-wrapper .wrapper {
   height: 100%;
@@ -38,29 +48,29 @@
 .inventory-wrapper .inventory-grid-wrapper .wrapper .inventory-info {
   position: absolute;
   width: 100%;
-  height: 60px;
+  height: 6.3vh;
 }
 .inventory-wrapper .inventory-grid-wrapper .wrapper .inventory-info .name {
   position: absolute;
-  top: -16px;
-  left: 5px;
-  font-size: 22px;
+  top: -1.7vh;
+  left: 0.5vh;
+  font-size: 2.3vh;
   font-weight: bold;
   color: var(--blue1);
 }
 .inventory-wrapper .inventory-grid-wrapper .wrapper .inventory-info .weight {
   position: absolute;
-  top: 15px;
-  left: 5px;
-  font-size: 15px;
+  top: 1.6vh;
+  left: 0.5vh;
+  font-size: 1.6vh;
   color: var(--white);
 }
 .inventory-wrapper .inventory-grid-wrapper .wrapper .inventory-info .weight-bar {
   position: absolute;
-  bottom: 0px;
-  left: 5px;
-  width: 490px;
-  height: 8px;
+  bottom: 0.1vh;
+  left: 0.5vh;
+  width: 51.25vh;
+  height: 0.9vh;
 }
 .inventory-wrapper .inventory-grid-wrapper .wrapper .inventory-info .weight-bar .cover {
   position: absolute;
@@ -70,12 +80,12 @@
   transition: all 0.5s;
 }
 .inventory-wrapper .inventory-grid-wrapper .wrapper .inventory-info .weight-bar .cover .color {
-  width: 490px;
+  width: 51.25vh;
   height: 100%;
   position: absolute;
-  left: 0px;
+  left: 0vh;
   background: var(--weight-bar);
-  border-radius: 10px;
+  border-radius: 1vh;
 }
 .inventory-wrapper .inventory-grid-wrapper .wrapper .inventory-grid {
   position: absolute;
@@ -86,31 +96,31 @@
   height: 100%;
 }
 .inventory-wrapper .inventory-grid-wrapper .wrapper .inventory-grid.main {
-  height: 600px;
-  bottom: 0px;
+  height: 62.7vh;
+  bottom: 0vh;
 }
 .inventory-wrapper .inventory-grid-wrapper .wrapper .inventory-grid.medium {
-  height: 300px;
-  bottom: 0px;
+  height: 31.35vh;
+  bottom: 0vh;
 }
 .inventory-wrapper .inventory-grid-wrapper .wrapper .inventory-grid.small {
-  height: 200px;
-  bottom: 0px;
+  height: 20.9vh;
+  bottom: 0vh;
 }
 .inventory-wrapper .inventory-grid-wrapper .wrapper .inventory-grid.side {
-  height: 600px;
-  bottom: 0px;
+  height: 62.7vh;
+  bottom: 0vh;
 }
 .inventory-wrapper .inventory-grid-wrapper .wrapper .inventory-grid .inventory-slot {
   position: relative;
-  width: 90px;
-  height: 90px;
-  margin-left: 5px;
-  margin-right: 5px;
-  margin-top: 5px;
-  margin-bottom: 5px;
+  width: 9.45vh;
+  height: 9.45vh;
+  margin-left: 0.5vh;
+  margin-right: 0.5vh;
+  margin-top: 0.5vh;
+  margin-bottom: 0.5vh;
   background: var(--inventory-slot-color);
-  border-radius: 4px;
+  border-radius: 0.4vh;
 }
 .inventory-wrapper .inventory-grid-wrapper .wrapper .inventory-grid .inventory-slot .background-icon {
   height: 100%;
@@ -118,54 +128,83 @@
 }
 .inventory-wrapper .inventory-grid-wrapper .wrapper .inventory-grid .inventory-slot .background-icon i {
   color: var(--dark2);
-  font-size: 40px;
+  font-size: 4.2vh;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
+.inventory-wrapper .inventory-grid-wrapper .wrapper .inventory-grid .inventory-slot .amount {
+  position: absolute;
+  color: var(--white);
+  top: 0.2vh;
+  right: 0.35vh;
+  text-align: right;
+  font-size: var(--inventory-slot-item-amount-size);
+}
+.inventory-wrapper .inventory-grid-wrapper .wrapper .inventory-grid .inventory-slot img {
+  position: absolute;
+  width: var(-inventory-slot-item-img-size);
+  height: var(--inventory-slot-item-img-size);
+  bottom: calc(var(--inventory-slot-item-quality-size) - 0.4vh);
+  left: 50%;
+  transform: translate(-50%);
+}
+.inventory-wrapper .inventory-grid-wrapper .wrapper .inventory-grid .inventory-slot .quality {
+  position: absolute;
+  background-color: var(--inventory-slot-item-quality-color);
+  border-bottom-left-radius: 0.4vh;
+  border-bottom-right-radius: 0.4vh;
+  bottom: 0vh;
+  left: 0vh;
+  height: var(--inventory-slot-item-quality-size);
+  width: 100%;
+}
 .inventory-wrapper .inventory-grid-wrapper .wrapper .inventory-grid .inventory-slot:hover {
   background: var(--inventory-slot-hover);
-  outline: 4px solid var(--blueOutline);
+  outline: 0.5vh solid var(--blueOutline);
   cursor: pointer;
+}
+.inventory-wrapper .inventory-grid-wrapper .wrapper .inventory-grid .inventory-slot:hover .quality {
+  display: none;
 }
 .inventory-wrapper .slot-info {
   position: relative;
   background: var(--inventory-slot-context-info);
   width: 100%;
-  height: 80px;
-  border-radius: 5px;
-  margin-bottom: 5px;
+  height: 8.2vh;
+  border-radius: 0.5vh;
+  margin-bottom: 0.6vh;
 }
 .inventory-wrapper .slot-info .label {
   color: var(--white);
   position: absolute;
-  top: -2px;
-  left: 15px;
-  font-size: 16px;
+  top: -0.2vh;
+  left: 1.55vh;
+  font-size: 1.7vh;
 }
 .inventory-wrapper .slot-info .extra {
   position: absolute;
-  top: 40px;
-  left: 15px;
-  width: 120px;
-  height: 20px;
+  top: 4.2vh;
+  left: 1.55vh;
+  width: 12vh;
+  height: 2vh;
 }
 .inventory-wrapper .slot-info .extra .element {
   position: relative;
   display: inline-flex;
-  margin-right: 5px;
+  margin-right: 0.6vh;
   height: 100%;
   width: -moz-fit-content;
   width: fit-content;
-  border-radius: 3px;
+  border-radius: 0.4vh;
   background: var(--inventory-slot-context-extra);
 }
 .inventory-wrapper .slot-info .extra .element .text {
   color: var(--white);
   position: relative;
-  top: -6px;
-  margin-left: 5px;
-  margin-right: 5px;
-  font-size: 10px;
+  top: -0.7vh;
+  margin-left: 0.6vh;
+  margin-right: 0.6vh;
+  font-size: 1.1vh;
 }
