--- a/web/src/css/Inventory.scss
+++ b/web/src/css/Inventory.scss
@@ -1,51 +1,63 @@
 .inventory-wrapper { //Main inventory wrapper
     position: absolute;
-    width: 1200px;
-    height: 700px;
+    width: 125vh;
+    height: 73vh;
 
     top: 50%;
     left: 50%;
 
     transform: translate(-50%, -50%);
 
-    // background-color: red;
+    .right-inventories {
+        position: absolute;
+        // background-color: green;
+        
+        width: 53.9vh;
+        height: 69vh;
+
+        right: 0vh;
+        
+        overflow: auto;
+    }
 
     .inventory-grid-wrapper {
-        // background-color: green; 
+        
         position: absolute;
 
         &.character-inventory {
            
-            width: 100px;
-            height: 660px;
-
-            left: 00px;
+            width: 10.5vh;
+            height: 68.9vh;
+            
+            left: 0vh;
         }
     
         &.player-inventory {
            
-            width: 508.0px;
-            height: 660px;
+            width: 53.1vh;
+            height: 68.9vh;
 
-            right: 550.2px;
-
-            // background-color: yellowgreen;
+            right: 57.4vh;
         }
 
         &.right-inventory {
-          
-            width: 509.0px;
+            position: relative;
+            width: 52.9vh;
             
-            right: 0px;
+            right: 0vh;
+            margin-bottom: 4.1vh;
+            
 
-            &.top {
-                top: 00px;
-                height: 360px;
+            &.last {
+                margin-bottom: 0vh;
             }
 
-            &.bottom {
-                bottom: 40px;
-                height: 260px;
+            &.medium {
+                height: 37.6vh;
+            }
+
+            &.small {
+                height: 27.2vh;
             }
         }
         
@@ -57,16 +69,14 @@
                 position: absolute;
 
                 width: 100%;
-                height: 60px;
-
-               
+                height: 6.3vh;
 
                 .name {
                     position: absolute;
-                    top: -16px;
-                    left: 5.0px;
+                    top: -1.7vh;
+                    left: 0.5vh;
 
-                    font-size: 22.0px;
+                    font-size: 2.3vh;
                     font-weight: bold;
 
                     color: var(--blue1);
@@ -74,10 +84,10 @@
 
                 .weight {
                     position: absolute;
-                    top: 15.0px;
-                    left: 5.0px;
+                    top: 1.6vh;
+                    left: 0.5vh;
                     
-                    font-size: 15.0px;
+                    font-size: 1.6vh;
 
                     color: var(--white);
                 }
@@ -85,11 +95,11 @@
                 .weight-bar {
                     position: absolute;
 
-                    bottom: 0px;
-                    left: 5.0px;
+                    bottom: 0.1vh;
+                    left: 0.5vh;
 
-                    width: 490px;
-                    height: 8.0px;
+                    width: 51.25vh;
+                    height: 0.9vh;
                     
                    
 
@@ -102,12 +112,12 @@
                         transition: all 0.5s;
 
                         .color {
-                            width: 490px;
+                            width: 51.25vh;
                             height: 100%;
                             position: absolute;
-                            left: 00px;
+                            left: 0vh;
                             background: var(--weight-bar);
-                            border-radius: 10px;
+                            border-radius: 1vh;
                         }
                     }
                     
@@ -126,38 +136,38 @@
                 height: 100%;
 
                 &.main {
-                    height: 600px;
-                    bottom: 00px;
+                    height: 62.7vh;
+                    bottom: 0vh;
                 }
 
                 &.medium {
-                    height: 300px;
-                    bottom: 00px;
+                    height: 31.35vh;
+                    bottom: 0vh;
                 }
 
                 &.small {
-                    height: 200px;
-                    bottom: 00px;
+                    height: 20.9vh;
+                    bottom: 0vh;
                 }
 
                 &.side {
-                    height: 600px;
-                    bottom: 00px;
+                    height: 62.7vh;
+                    bottom: 0vh;
                 }
     
                 .inventory-slot {
                     position: relative;
     
-                    width: 90px;
-                    height: 90px;
+                    width: 9.45vh;
+                    height: 9.45vh;
     
-                    margin-left: 5.0px;
-                    margin-right: 5.0px;
-                    margin-top: 5.0px;
-                    margin-bottom: 5.0px;
+                    margin-left: 0.5vh;
+                    margin-right: 0.5vh;
+                    margin-top: 0.5vh;
+                    margin-bottom: 0.5vh;
     
                     background: var(--inventory-slot-color);
-                    border-radius: 4.0px;
+                    border-radius: 0.4vh;
                     
 
                     .background-icon {
@@ -166,7 +176,7 @@
 
                         i {
                             color: var(--dark2);
-                            font-size: 40px;
+                            font-size: 4.2vh;
 
                             position: absolute;
 
@@ -177,11 +187,55 @@
                         }
                     }
 
+                    .amount {
+                        position: absolute;
+                        color: var(--white);
+
+                        top: 0.2vh;
+                        right: 0.35vh;
+                  
+                        text-align: right;
+
+                        font-size: var(--inventory-slot-item-amount-size);
+                    }
+
+                    img {
+                        position: absolute;
+                        width: var(-inventory-slot-item-img-size);
+                        height: var(--inventory-slot-item-img-size);
+                      
+
+                        bottom: calc(var(--inventory-slot-item-quality-size) - 0.4vh);
+                        left: 50%;
+                   
+
+                        transform: translate(-50%);
+                    }
+
+                    .quality {
+                        position: absolute;
+
+                        background-color: var(--inventory-slot-item-quality-color);
+
+                        border-bottom-left-radius: 0.4vh;
+                        border-bottom-right-radius: 0.4vh;
+                        bottom: 0vh;
+                        left: 0vh;
+
+                        height: var(--inventory-slot-item-quality-size);
+                        width: 100%;
+                    }
+
 
                     &:hover {
                         background: var(--inventory-slot-hover);
-                        outline: 4.0px solid var(--blueOutline); 
+                        outline: 0.5vh solid var(--blueOutline); 
                         cursor: pointer;
+
+                            
+                        .quality {
+                            display: none;
+                        }
                     }
                 }
             }
@@ -197,29 +251,29 @@
         background: var(--inventory-slot-context-info);
         
         width: 100%;
-        height: 80px;
-        border-radius: 5.0px;
+        height: 8.2vh;
+        border-radius: 0.5vh;
 
-        margin-bottom: 5.0px;
+        margin-bottom: 0.6vh;
 
         .label {
             color: var(--white);
             position: absolute;
 
-            top: -2.0px;
-            left: 15px;
+            top: -0.2vh;
+            left: 1.55vh;
 
-            font-size: 16px;
+            font-size: 1.7vh;
         }
 
         .extra {
             position: absolute;
 
-            top: 40px;
-            left: 15px;
+            top: 4.2vh;
+            left: 1.55vh;
 
-            width: 120px;
-            height: 20px;
+            width: 12vh;
+            height: 2vh;
 
 
             .element {
@@ -227,12 +281,12 @@
 
                 display: inline-flex;
 
-                margin-right: 5.0px;
+                margin-right: 0.6vh;
 
                 height: 100%;
                 width: fit-content;
                 
-                border-radius: 3.0px;
+                border-radius: 0.4vh;
 
                 background: var(--inventory-slot-context-extra);
 
@@ -240,11 +294,11 @@
                     color: var(--white);
                     position: relative;
 
-                    top: -6.0px;
-                    margin-left: 5.0px;
-                    margin-right: 5.0px;
+                    top: -0.7vh;
+                    margin-left: 0.6vh;
+                    margin-right: 0.6vh;
 
-                    font-size: 10px;
+                    font-size: 1.1vh;
 
                 }
             }
